chore: configure Jest, ESLint, Prettier, and development tooling
- Migrate from Karma/Jasmine to Jest 30
- Set up ESLint and Prettier with Husky pre-commit hooks
- Configure TypeScript strict mode and esModuleInterop
- Update VS Code tasks and settings for Jest workflow

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,5 +1,4 @@
 {
-  // For more information, visit: https://go.microsoft.com/fwlink/?LinkId=733558
   "version": "2.0.0",
   "tasks": [
     {
@@ -21,22 +20,23 @@
       }
     },
     {
+      "label": "test",
       "type": "npm",
       "script": "test",
+      "problemMatcher": []
+    },
+    {
+      "label": "test:watch",
+      "type": "npm",
+      "script": "test:watch",
       "isBackground": true,
-      "problemMatcher": {
-        "owner": "typescript",
-        "pattern": "$tsc",
-        "background": {
-          "activeOnStart": true,
-          "beginsPattern": {
-            "regexp": "(.*?)"
-          },
-          "endsPattern": {
-            "regexp": "bundle generation complete"
-          }
-        }
-      }
+      "problemMatcher": []
+    },
+    {
+      "label": "test:coverage",
+      "type": "npm",
+      "script": "test:coverage",
+      "problemMatcher": []
     }
   ]
 }
