--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -6,7 +6,11 @@
     "outDir": "./out-tsc/app",
     "types": [
       "node"
-    ]
+    ],
+    "paths": {
+      "@models": ["src/app/models"],
+      "@models/*": ["src/app/models/*"]
+    }
   },
   "include": [
     "src/**/*.ts"
