feat: Add error interceptor.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,9 @@
       "@models": ["src/app/models"],
       "@models/*": ["src/app/models/*"],
       "@mocks": ["src/app/shared/mocks"],
-      "@mocks/*": ["src/app/shared/mocks/*"]
+      "@mocks/*": ["src/app/shared/mocks/*"],
+      "@interceptors": ["src/app/core/interceptors"],
+      "@interceptors/*": ["src/app/core/interceptors/*"]
     }
   },
   "angularCompilerOptions": {
