--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -9,7 +9,11 @@
     ],
     "paths": {
       "@models": ["src/app/models"],
-      "@models/*": ["src/app/models/*"]
+      "@models/*": ["src/app/models/*"],
+      "@mocks": ["src/app/shared/mocks"],
+      "@mocks/*": ["src/app/shared/mocks/*"],
+      "@interceptors": ["src/app/core/interceptors"],
+      "@interceptors/*": ["src/app/core/interceptors/*"]
     }
   },
   "include": [
