--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@angular/platform-server": "^20.3.0",
     "@angular/router": "^20.3.0",
     "@angular/ssr": "^20.3.9",
+    "@ngrx/signals": "^20.1.0",
     "express": "^5.1.0",
     "ngx-infinite-scroll": "^20.0.0",
     "rxjs": "~7.8.0",
