--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -13,7 +13,9 @@
       "@mocks": ["src/app/shared/mocks"],
       "@mocks/*": ["src/app/shared/mocks/*"],
       "@interceptors": ["src/app/core/interceptors"],
-      "@interceptors/*": ["src/app/core/interceptors/*"]
+      "@interceptors/*": ["src/app/core/interceptors/*"],
+      "@core": ["src/app/core"],
+      "@core/*": ["src/app/core/*"]
     }
   },
   "include": [
