--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,9 @@
       "@mocks": ["src/app/shared/mocks"],
       "@mocks/*": ["src/app/shared/mocks/*"],
       "@interceptors": ["src/app/core/interceptors"],
-      "@interceptors/*": ["src/app/core/interceptors/*"]
+      "@interceptors/*": ["src/app/core/interceptors/*"],
+      "@core": ["src/app/core"],
+      "@core/*": ["src/app/core/*"]
     }
   },
   "angularCompilerOptions": {
