feat:   - Added dumb BadgeComponent.   - Added dumb CardComponent.   - Added smart JokeComponent leveraging BadgeComponent and CardComponent.   - Leverage JokeComponent from JokeListComponent.   - Styled JokeListComponent.

--- a/angular.json
+++ b/angular.json
@@ -26,6 +26,9 @@
                 "input": "public"
               }
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": ["src/styles"]
+            },
             "styles": ["src/styles/styles.scss"]
           },
           "configurations": {
