--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,9 @@
       "@core": ["src/app/core"],
       "@core/*": ["src/app/core/*"],
       "@components": ["src/app/shared/components"],
-      "@components/*": ["src/app/shared/components/*"]
+      "@components/*": ["src/app/shared/components/*"],
+      "@utils": ["src/app/shared/utils"],
+      "@utils/*": ["src/app/shared/utils/*"]
     }
   },
   "angularCompilerOptions": {
