--- a/package.json
+++ b/package.json
@@ -3,22 +3,25 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "prestart": "npm run generate-tokens",
     "start": "ng serve",
-    "start:dev": "ng dev",
+    "predev": "npm run generate-tokens",
+    "dev": "ng dev",
+    "prebuild": "npm run generate-tokens",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:clear": "jest --clearCache",
-    "serve:ssr:sekoia-technical-test": "node dist/sekoia-technical-test/server/server.mjs",
     "lint": "ng lint",
     "lint:fix": "ng lint --fix",
-    "lint:scss": "stylelint '**/*.scss'",
-    "lint:scss:fix": "stylelint '**/*.scss' --fix",
-    "format": "prettier --write \"src/**/*.{ts,html,scss,json}\"",
-    "format:check": "prettier --check \"src/**/*.{ts,html,scss,json}\"",
-    "prepare": "husky"
+    "lint:scss": "stylelint **/*.scss",
+    "lint:scss:fix": "stylelint **/*.scss --fix",
+    "format": "prettier --write src/**/*.{ts,html,scss,json}",
+    "format:check": "prettier --check src/**/*.{ts,html,scss,json}",
+    "prepare": "husky",
+    "generate-tokens": "node scripts/generate-tokens.mjs"
   },
   "prettier": {
     "printWidth": 100,
@@ -42,6 +45,8 @@
     "@angular/platform-server": "^20.3.0",
     "@angular/router": "^20.3.0",
     "@angular/ssr": "^20.3.9",
+    "@ng-icons/core": "^32.4.0",
+    "@ng-icons/heroicons": "^32.4.0",
     "@ngrx/signals": "^20.1.0",
     "express": "^5.1.0",
     "ngx-infinite-scroll": "^20.0.0",
