--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "module": "preserve",
     "esModuleInterop": true,
     "baseUrl": "./",
+    "types": ["jest", "node"],
     "paths": {
       "@models": ["src/app/models"],
       "@models/*": ["src/app/models/*"],
