--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -6,5 +6,9 @@
     "outDir": "./out-tsc/spec",
     "types": ["jest", "node"]
   },
-  "include": ["src/**/*.spec.ts", "src/**/*.d.ts"]
+  "include": [
+    "src/**/*.spec.ts",
+    "src/**/*.test.ts",
+    "src/**/*.mock.ts",
+  ]
 }
